# brokrest

./: .gitignore  .pre-commit-config.yaml  README.md  README_lines.md  README_rulers.md  env.yaml  noxfile.py  pyproject.toml  ta-lib.sh
.github/workflows/: format.yaml  precommit.yaml  release.yaml  typecheck.yaml  unittest.yaml
ci/: gha.py  pdm.py  pre-commit.py  sh.py  testing.py
examples/: yfinance-plotting.html  yfinance-plotting.py
scripts/: backtest.py  backtest_analysis.py  group_ids_in_logs.py  miner.py  parse_logs.py  plot_trades_indicators.py  potential.py
src/brokrest/: __init__.py  __main__.py  arrays.py  candles.py  canvases.py  cli.py  devices.py  equations.py  errors.py  histories.py  indicators.py  painters.py  plotting.py  signals.py  tds.py  typing.py  vectors.py
src/brokrest/arrays/: README.md  __init__.py  arrays.py  containers.py  dicts.py  jagged.py
src/brokrest/data/: yquery.py
src/brokrest/geo/: __init__.py  coords.py  equations.py  lines.py  vecs.py
src/brokrest/loaders/: __init__.py  kraken.py
src/brokrest/miners/: __init__.py  parsers.py
src/brokrest/rulers/: __init__.py  linear.py  rulers.py
src/brokrest/shapes/: __init__.py  contours.py  histories.py  plotting.py  regression.py  rulers.py
src/brokrest/topos/: __init__.py  _turnaround.py  candles.py  equations.py  geo.py  groups.py  items.py  lines.py  points.py  polygons.py  probs.py  rects.py  topos.py  vecs.py
tests/: conftest.py  test_arrays.py  test_candles.py  test_equations.py  test_indicators.py  test_lines.py  test_ok.py  test_polygons.py  test_rulers.py  test_signals.py  test_vectors.py  test_yq.py
tests/geo/: plotting.py
tests/rulers/: test_linreg.py
tests/topos/: test_candles.py  test_convex.py  test_lines.py  test_topos.py  test_turnaround.py  test_vectors.py
