[project]
name = "brokrest"
description = "Brokers can rest now."
requires-python = ">=3.12,<4"
readme = "README.md"
dynamic = ["version"]
dependencies = ["freqtrade>=2025.4", "numpy>=1.26.4", "pandas>=2.2.3", "scipy>=1.15.3", "torch>=2.7.0", "sympy>=1.14.0", "alive-progress>=3.2.0", "lark>=1.2.2", "parse>=1.20.2", "scikit-learn>=1.6.1", "fs"]

[[project.authors]]
name = "RenChu Wang"
email = "patrick1031wang@gmail.com"

[project.license]
text = "GPL"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = ["-v", "--import-mode=importlib"]

[tool.pdm]
