[project]
name = "brokrest"
description = "Brokers can rest now."
requires-python = ">=3.12,<4"
readme = "README.md"
dynamic = ["version"]
dependencies = ["freqtrade>=2025.4", "numpy>=1.26.4", "pandas>=2.2.3", "scipy>=1.15.3", "torch>=2.7.0", "sympy>=1.14.0", "alive-progress>=3.2.0", "lark>=1.2.2", "parse>=1.20.2", "scikit-learn>=1.6.1", "fs", "structlog>=25.4.0", "ta-lib>=0.6.4", "cython>=3.1.2", "fire>=0.7.0", "shapely>=2.1.1"]

[[project.authors]]
name = "RenChu Wang"
email = "patrick1031wang@gmail.com"

[project.license]
text = "GPL"

[project.optional-dependencies]
bokeh = [
    "bokeh>=3.7.3",
]
[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
exclude = ["^scripts/.py$"]

[tool.pylint."MESSAGE CONTROL"]
disable = [
    "unnecessary-ellipsis",
    "redefined-builtin",
    "redefined-outer-name",
    "too-few-public-methods",
]

[tool.pytest.ini_options]
addopts = ["-v", "--import-mode=importlib"]

[dependency-groups]
checks = [
    "pre-commit>=4.2.0",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pylint>=4.0.4",
]
tests = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.7.0",
    "pytest-sugar>=1.0.0",
]
build = [
    "pip>=25.1.1",
]
