[project]
name = "brokrest"
description = "Brokers can rest now."
requires-python = ">=3.13,<3.15"
readme = "README.md"
dynamic = ["version"]
dependencies = ["numpy>=1.26.4", "pandas>=3.0.1", "scipy>=1.15.3", "torch>=2.9.1", "sympy>=1.14.0", "lark>=1.2.2", "scikit-learn>=1.6.1", "shapely>=2.1.1", "tensordict>=0.11.0", "bokeh>=3.8.2"]

[[project.authors]]
name = "RenChu Wang"
email = "patrick1031wang@gmail.com"

[project.license]
text = "AGPL"

[project.optional-dependencies]
data = [
    "bokeh-sampledata>=2025.0",
    "yahooquery>=2.4.1",
]
[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
exclude = ["^scripts/.py$"]

# Skipping analysis for some modules because they are not typed.
[[tool.mypy.overrides]]
module = [
    "tensordict.*",
    "yahooquery.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--ff",
    "--nf",
    "--import-mode=importlib",
    "--dist=loadgroup",
]
[dependency-groups]
checks = [
    "pre-commit>=4.2.0",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "nox[pbs]>=2026.2.9",
]
tests = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.7.0",
    "pytest-testmon>=2.2.0",
    "pytest-sugar>=1.1.1",
]
dev = [
    "ipython>=9.8.0",
    "pip>=26.0.1",
]
